--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 ---
+before_install:
+  - gem update --system
+  - gem --version
+
 script: "./script/cibuild"
-gemfile: "this/does/not/exist"
+gemfile: "./Gemfile"
 rvm:
-  - "1.8.7"
+  - "1.9.3"
