--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 ---
+language: ruby
+
 before_install:
   - gem update --system
   - gem --version
@@ -6,4 +8,4 @@ before_install:
 script: "./script/cibuild"
 gemfile: "./Gemfile"
 rvm:
-  - "1.9.3"
+  - 1.9.3
