--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@
 language: ruby
 
 before_install:
-  - gem update --system
-  - gem --version
+  - bundle update librarian-puppet
 
 script: "./script/cibuild"
 gemfile: "./Gemfile"
